Fixed issue with drybox icon inccorectly dispalyed on Client.aspx. Also some updates for Visual Studio code cleanup suggestions.

--- a/sselData/data.master
+++ b/sselData/data.master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="data.master.cs" Inherits="sselData.data" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="data.master.cs" Inherits="sselData.DataMaster" %>
 
 <!DOCTYPE html>
 
